# libmunna

./: .gitignore  CMakeLists.txt  README.md
include/: types.h
include/munna/: munna_file.h
include/munna/filetypes/: munna_yaz0.h
src/: main.cpp
src/munna/: munna_file.cpp
src/munna/filetypes/: munna_yaz0.cpp
